05/tutorial5.4.1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: demo.info
    http:
      paths:
      - path: /
        pathType: Prefix      
        backend:
          service:
            name: demo-service
            port: 
              number: 80
